--- a/interactions/input_clear.html
+++ b/interactions/input_clear.html
@@ -1,7 +1,8 @@
 ---
 layout: interactions
 title: Input Clear
-name: input-clear
+attrname: input-clear
+widgetname: inputclear
 interaction_selected: selected
 description: <p>When a user focuses and begins typing on a text input field, a small x appears along the right side of the field that can be clicked to clear it. If there is already text in the input field, the x will appear without any typing when the field receives focus.</p>
 basic_tab:
