--- a/interactions/tabs.html
+++ b/interactions/tabs.html
@@ -1,7 +1,8 @@
 ---
 layout: interactions
 title: Tab
-name: tab
+attrname: tabs
+widgetname: tabs
 interaction_selected: selected
 description: <p>Tabs are kind of like togglers, but only one tab is active at a time. When you enable the state of one tab, another tab is disabled.</p>
 basic_tab:
