--- a/interactions/toggler.html
+++ b/interactions/toggler.html
@@ -1,7 +1,8 @@
 ---
 layout: interactions
 title: Toggler
-name: toggler
+attrname: toggler
+widgetname: toggler
 interaction_selected: selected
 description: |
     <p>A toggler is an interaction that coordinates two components &mdash; a button, and a set of contents.</p>
