--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -1,7 +1,8 @@
 ---
 layout: interactions
 title: Zoom
-name: zoom
+attrname: zoom
+widgetname: zoom
 interaction_selected: selected
 description: <p>An interaction that zooms into an image and displays a higher resolution image that can be panned.</p>
 basic_tab:
