--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -169,7 +169,7 @@ js_tab:
         </div>
         <div data-ur-carousel-component="scroll_container">
           <div data-ur-carousel-component="item">
-            <img data-ur-zoom-component="img" src="{{site.baseurl}}images/pic1.jpg" data-ur-src="{{site.baseurl}}images/pic2.jpg" alt="1">
+            <img data-ur-zoom-component="img" src="{{site.baseurl}}images/pic1.jpg" data-ur-src="{{site.baseurl}}images/pic2.jpg" alt="1" data-ur-width="1000" data-ur-height="573">
           </div>
           <div data-ur-carousel-component="item">
             <img data-ur-zoom-component="img" src="{{site.baseurl}}images/pic3.jpg" data-ur-src="{{site.baseurl}}images/pic3.jpg" alt="2">
@@ -194,7 +194,7 @@ js_tab:
         </div>
         <div data-ur-carousel-component="scroll_container">
           <div data-ur-carousel-component="item">
-            <img data-ur-zoom-component="img" src="images/pic1.jpg" data-ur-src="images/pic2.jpg">
+            <img data-ur-zoom-component="img" src="images/pic1.jpg" data-ur-src="images/pic2.jpg" data-ur-width="1000" data-ur-height="573">
           </div>
           <div data-ur-carousel-component="item">
             <img data-ur-zoom-component="img" src="images/pic3.jpg" data-ur-src="images/pic3.jpg">
