--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ name: home
   
   <h2>Carousel</h2>
   <div id="carousel-demo" class="tabs" data-ur-set="tabs">
-    <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Interaction</div>
-    <div data-ur-tabs-component="button" data-ur-tab-id="html">HTML</div>
-    <div data-ur-tabs-component="button" data-ur-tab-id="css">CSS</div>
+    <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Interaction</a>
+    <a data-ur-tabs-component="button" data-ur-tab-id="html">HTML</a>
+    <a data-ur-tabs-component="button" data-ur-tab-id="css">CSS</a>
     <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
       <div data-ur-set="carousel">
         <p>
@@ -97,15 +97,15 @@ name: home
     </div>
   </div>
   <div class="text-right">
-    <a href="{{site.baseurl}}interactions/carousel.html" class="see_more_link">More about carousel</a>
+    <a href="{{site.baseurl}}interactions/carousel.html" class="see-more-link">More about carousel</a>
   </div>
   <hr>
 
   <h2>Tabs</h2>
   <div id="tabs-demo" class="tabs" data-ur-set="tabs">
-    <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Interaction</div>
-    <div data-ur-tabs-component="button" data-ur-tab-id="html">HTML</div>
-    <div data-ur-tabs-component="button" data-ur-tab-id="css">CSS</div>
+    <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Interaction</a>
+    <a data-ur-tabs-component="button" data-ur-tab-id="html">HTML</a>
+    <a data-ur-tabs-component="button" data-ur-tab-id="css">CSS</a>
     <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
       <div data-ur-set="tabs">
         <div class="btnbar">
@@ -152,15 +152,15 @@ name: home
     </div>
   </div>
   <div class="text-right">
-    <a href="{{site.baseurl}}interactions/tabs.html" class="see_more_link">More about tabs</a>
+    <a href="{{site.baseurl}}interactions/tabs.html" class="see-more-link">More about tabs</a>
   </div>
   <hr>
   
   <h2>Toggler</h2>
   <div id="toggler-demo" class="tabs" data-ur-set="tabs">
-    <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Interaction</div>
-    <div data-ur-tabs-component="button" data-ur-tab-id="html">HTML</div>
-    <div data-ur-tabs-component="button" data-ur-tab-id="css">CSS</div>
+    <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Interaction</a>
+    <a data-ur-tabs-component="button" data-ur-tab-id="html">HTML</a>
+    <a data-ur-tabs-component="button" data-ur-tab-id="css">CSS</a>
     <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
       <div data-ur-set="toggler">
         <div class="btn" data-ur-toggler-component="button">Click Here!</div>
@@ -197,7 +197,7 @@ name: home
     </div>
   </div>
   <div class="text-right">
-    <a href="{{site.baseurl}}interactions/toggler.html" class="see_more_link">More about toggler</a>
+    <a href="{{site.baseurl}}interactions/toggler.html" class="see-more-link">More about toggler</a>
   </div>
   <hr>
   
