--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -150,8 +150,8 @@ js_tab:
   <dd>should be within the set</dd>
 </dl>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="carousel" data-ur-infinite="enabled" class="d-col-8">
       <div data-ur-carousel-component="dots" class="pull-right"></div>
@@ -204,8 +204,8 @@ js_tab:
   <dd>apply this to the set (value is in milliseconds)</dd>
 </dl>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="carousel" data-ur-autoscroll="enabled" class="d-col-8">
       <span data-ur-carousel-component="count"></span>
@@ -254,8 +254,8 @@ js_tab:
   <dd>apply this to the set</dd>
 </dl>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="carousel" data-ur-fill="5" class="d-col-8">
       <div data-ur-carousel-component="dots" class="pull-right"></div>
