--- a/interactions/geocode.html
+++ b/interactions/geocode.html
@@ -402,8 +402,8 @@ js_tab:
 <hr>
 
 <h2>Geocode Examples</h2>
-<p><a class="see_more_link" href="{{site.baseurl}}interactions/geocode/button.html">Activating the geolocator with a button</a></p>
-<p><a class="see_more_link" href="{{site.baseurl}}interactions/geocode/text_inputs.html">Populate text inputs rather than select elements</a></p>
+<p><a class="see-more-link" href="{{site.baseurl}}interactions/geocode/button.html">Activating the geolocator with a button</a></p>
+<p><a class="see-more-link" href="{{site.baseurl}}interactions/geocode/text_inputs.html">Populate text inputs rather than select elements</a></p>
 <hr>
 
 <h2>FAQs</h2>
