--- a/interactions/tabs.html
+++ b/interactions/tabs.html
@@ -89,8 +89,8 @@ js_tab:
 
 <h2>Recommended Styles</h2>
 <div class="tabs code" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="scss" data-ur-state="enabled">SCSS</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="css">CSS</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="scss" data-ur-state="enabled">SCSS</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="css">CSS</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="scss" data-ur-state="enabled">
     <pre data-lang="scss">
     /* Recommended SCSS Styling */
@@ -125,8 +125,8 @@ js_tab:
   Here, as proof of principle, we're putting the <code>data-ur-state="enabled"</code> attribute on the second tab to illustrate that a different tab can be selected at the outset.
 </p>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="tabs">
       <div class="btnbar">
@@ -170,8 +170,8 @@ js_tab:
 <p>So far, we've set one of the tabs to be enabled at the start. However, this isn't strictly necessary. In the following example, we start out with no states defined, so all tabs start out closed.</p>
 <p>The first tab we click on will be the first one to be "enabled". And we've set the attribute <code>data-ur-closeable</code> to <code>"enabled"</code> on this tab set to allow the accordian to be collapsed back to its original state by clicking again on the open tab.</p>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="tabs" data-ur-closeable="enabled">
       <div class="btn" data-ur-tabs-component="button" data-ur-tab-id="first">First</div>
