--- a/interactions/toggler.html
+++ b/interactions/toggler.html
@@ -60,8 +60,8 @@ js_tab:
 
 <h2>Recommended Styles</h2>
 <div class="tabs code" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="scss" data-ur-state="enabled">SCSS</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="css">CSS</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="scss" data-ur-state="enabled">SCSS</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="css">CSS</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="scss" data-ur-state="enabled">
     <pre data-lang="scss">
     /* Recommended SCSS Styling */
@@ -96,8 +96,8 @@ js_tab:
   If we want something to start out visible, and then disappear when we click on the button, we can just add the <code>data-ur-state="enabled"</code> attribute to the button and its content.
 </p>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="toggler">
       <div class="btn" data-ur-toggler-component="button" data-ur-state="enabled">
@@ -128,8 +128,8 @@ js_tab:
   It's super-easy to nest togglers as well. Click on the button, and then click on the text that shows up below. (Notice how the sub-togglers even remember what state they were in when you toggle the main button.)
 </p>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="toggler">
       <p data-ur-toggler-component="button">Foods</p>
