--- a/interactions/zoom.html
+++ b/interactions/zoom.html
@@ -80,8 +80,8 @@ js_tab:
 
 <h2>Recommended Styles</h2>
 <div class="tabs code" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="scss" data-ur-state="enabled">SCSS</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="css">CSS</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="scss" data-ur-state="enabled">SCSS</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="css">CSS</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="scss" data-ur-state="enabled">
     <pre data-lang="scss">
     /* Recommended SCSS Styling (using the Bourbon mixin library) */
@@ -155,8 +155,8 @@ js_tab:
 <h3>Carousel combo</h3>
 <p>Here we place zoom interactions inside a carousel</p>
 <div class="tabs" data-ur-set="tabs">
-  <div data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</div>
-  <div data-ur-tabs-component="button" data-ur-tab-id="html">The Code</div>
+  <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
+  <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
     <div data-ur-set="carousel" data-ur-fill="1" style="max-width: 500px">
       <div data-ur-carousel-component="dots" class="pull-right"></div>
