--- a/documentation/advanced.html
+++ b/documentation/advanced.html
@@ -132,16 +132,15 @@ documentation_selected: selected
       <div data-ur-toggler-component="content">
         <pre data-lang="css">
         [data-ur-carousel-component="dot"] {
-          border-radius: 7px;
-          background: black;
+          border-radius: 5px;
+          background: #bbb;
           display: inline-block;
           margin: 0 5px;
-          opacity: 0.8;
           width: 10px;
           height: 10px;
         }
-        data-ur-carousel-component="dot"][data-ur-state="inactive"] {
-          background: #bbb;
+        [data-ur-carousel-component="dot"][data-ur-state="active"] {
+          background: #000;
         }
         </pre>
       </div>
