--- a/interactions/drawer.html
+++ b/interactions/drawer.html
@@ -9,6 +9,7 @@
   }
   [data-ur-toggler-component="button"] {
     cursor: pointer;
+    display: block;
   }
   body {
     -webkit-text-size-adjust: 100%;
@@ -17,9 +18,10 @@
     font: 300 14px/24px Lato, Helvetica, Arial, sans-serif;
     margin: 0;
   }
-  header {
+  #header {
     background: #777;
     color: #fff;
+    display: block;
     font-size: 13px;
     padding: 5px 10px;
     position: relative;
@@ -61,8 +63,10 @@
   #menu, #page {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
     -webkit-transition: 0.3s;
     -moz-transition: 0.3s;
+    transition: 0.3s;
     width: 0;
   }
   
@@ -86,10 +90,12 @@
   #wrapper[data-ur-state="enabled"] #menu {
     -webkit-transform: translate3d(100%, 0, 0) scale(1); /* add on scale(1) to trigger transitionend event */
     -moz-transform: translate3d(100%, 0, 0) scale(1);
+    transform: translate3d(100%, 0, 0) scale(1);
   }
   #wrapper[data-ur-state="enabled"] #page {
     -webkit-transform: translate3d(50%, 0, 0);
     -moz-transform: translate3d(50%, 0, 0);
+    transform: translate3d(50%, 0, 0);
   }
   
   #mask {
@@ -108,6 +114,7 @@
   .static #menu {
     -webkit-transform: translate3d(100%, 0, 0);
     -moz-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
   }
   .static #page {
     position: relative;
@@ -126,20 +133,22 @@
   .wide #wrapper[data-ur-state="enabled"] #page {
     -webkit-transform: translate3d(200px, 0, 0);
     -moz-transform: translate3d(200px, 0, 0);
+    transform: translate3d(200px, 0, 0);
   }
   
   .scroll #wrapper[data-ur-state="enabled"] {
     height: 100%;
   }
   .scroll #menu {
+    -webkit-overflow-scrolling: touch;
     overflow-y: scroll;
-    /*-webkit-overflow-scrolling: touch;*/
   }
   
   /* translate3d here gets all weird on android */
   .scroll #wrapper[data-ur-state="enabled"] #menu {
     -webkit-transform: translateX(100%);
     -moz-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
   }
   
   .right #wrapper {
@@ -154,15 +163,18 @@
   .right #wrapper[data-ur-state="enabled"] #menu {
     -webkit-transform: translate3d(-100%, 0, 0) scale(1); /* add on scale(1) to trigger transitionend event */
     -moz-transform: translate3d(-100%, 0, 0) scale(1);
+    transform: translate3d(-100%, 0, 0) scale(1);
   }
   .right #wrapper[data-ur-state="enabled"] #page {
     -webkit-transform: translate3d(-50%, 0, 0);
     -moz-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0);
   }
   
   .right.static #menu {
     -webkit-transform: translate3d(-100%, 0, 0);
     -moz-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
   }
   
   .right.wide #menu {
@@ -171,11 +183,13 @@
   .right.wide #wrapper[data-ur-state="enabled"] #page {
     -webkit-transform: translate3d(-200px, 0, 0);
     -moz-transform: translate3d(-200px, 0, 0);
+    transform: translate3d(-200px, 0, 0);
   }
   /* translate3d here gets all weird on android */
   .right.scroll #wrapper[data-ur-state="enabled"] #menu {
     -webkit-transform: translateX(-100%);
-    -moz-transform: translateX(-100%);
+    -moz-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
   }
   
   /* if page is shorter than viewport */
@@ -193,25 +207,25 @@
   <div id="wrapper" data-ur-toggler-component="content">
   <div id="menu" data-ur-toggler-component="drawer">
     <div data-ur-set="toggler">
-      <div data-ur-toggler-component="button" data-ur-state="enabled">
+      <a data-ur-toggler-component="button" data-ur-state="enabled">
         Accordion #1
-      </div>
+      </a>
       <div data-ur-toggler-component="content" data-ur-state="enabled">
         elit. Proin vitae velit dignissim, volutpat risus vel, blandit dui.
       </div>
     </div>
     <div data-ur-set="toggler">
-      <div data-ur-toggler-component="button" data-ur-state="enabled">
+      <a data-ur-toggler-component="button" data-ur-state="enabled">
         Accordion #2
-      </div>
+      </a>
       <div data-ur-toggler-component="content" data-ur-state="enabled">
         lorem aliquet posuere consequat, mauris tellus fringilla mi, nec
       </div>
     </div>
     <div data-ur-set="toggler">
-      <div data-ur-toggler-component="button" data-ur-state="enabled">
+      <a data-ur-toggler-component="button" data-ur-state="enabled">
         Accordion #3
-      </div>
+      </a>
       <div data-ur-toggler-component="content" data-ur-state="enabled">
         Fusce sodales vel dolor at vestibulum. Duis dapibus elit et purus sollicitudin venenatis. Etiam porttitor nunc enim, quis dictum nibh laoreet eu. Nulla quam ante, molestie eu vestibulum vulputate, sagittis in mauris. Sed accumsan malesuada sodales. Suspendisse potenti. Pellentesque ac sem tellus. Phasellus ut nisl nisl. Etiam gravida porttitor arcu, eu condimentum enim volutpat sed. Cras eu porttitor neque, ornare molestie quam. Pellentesque ultricies vitae orci id viverra. Nulla sed congue ipsum.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et gravida orci, id tincidunt leo. Maecenas eu eros mattis, mattis nisi id, dictum diam. Duis feugiat vestibulum sodales. Suspendisse fermentum molestie ligula, at eleifend felis rutrum ut. Vestibulum gravida justo id lectus dignissim, sed malesuada ipsum suscipit. Etiam a dictum purus, at venenatis odio. Ut pellentesque pellentesque mauris in blandit. Cras mollis, quam et rhoncus tincidunt, magna nisi luctus neque, et pharetra massa libero et metus. Donec vitae lacinia massa.
@@ -220,7 +234,7 @@
     </div>
   </div>
   <div id="page">
-    <header data-ur-toggler-component="button">Menu</header>
+    <a id="header" data-ur-toggler-component="button">Menu</a>
     <h2>Click the Menu above to try the drawer toggle</h2>
     <p>This page uses CSS3 transforms and transitions.</p>
     <p>The options below demonstrate ways that you might want to change the behavior of the drawer toggle by adding classes to the body element of the page, which are targeted by the custom CSS.</p>
@@ -238,7 +252,7 @@
   <script src="../src/jquery.uranium.js"></script>
   <script>
     $(function() {
-      var $menuElement = $("header");
+      var $menuElement = $("#header");
       var $bodyElement = $("body");
 
       $("#menuStateTogglers").on("click", "a", function(e) {
