--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -320,7 +320,7 @@ js_tab:
   <a data-ur-tabs-component="button" data-ur-tab-id="ex" data-ur-state="enabled">Example</a>
   <a data-ur-tabs-component="button" data-ur-tab-id="html">The Code</a>
   <div data-ur-tabs-component="content" data-ur-tab-id="ex" data-ur-state="enabled">
-    <div data-ur-set="carousel" data-ur-fill="5" class="d-col-8">
+    <div data-ur-set="carousel" data-ur-fill="5" data-ur-infinite="disabled" class="d-col-8">
       <div data-ur-carousel-component="dots" class="pull-right"></div>
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</a>
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</a>
@@ -338,7 +338,7 @@ js_tab:
   </div>
   <div data-ur-tabs-component="content" data-ur-tab-id="html">
     {% capture tmp %}
-    <div data-ur-set="carousel" data-ur-fill="5">
+    <div data-ur-set="carousel" data-ur-fill="5" data-ur-infinite="disabled">
       <div data-ur-carousel-component="dots"></div>
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="prev">Prev</a>
       <a data-ur-carousel-component="button" data-ur-carousel-button-type="next">Next</a>
