--- a/documentation/overview.html
+++ b/documentation/overview.html
@@ -38,7 +38,7 @@ documentation_selected: selected
       </html>
       {% endcapture %}
       <pre data-lang="html">{{ tmp | xml_escape }}</pre>
-      <p>Just download the latest minified version of jQuery, and the Uranium script, and save them in your /scripts directory. Then reference them in your HTML document, and you should be good to go.</p>
+      <p>Just download the latest minified version of jQuery, and the Uranium script, and save them in your <em>scripts</em> directory. Then reference them in your HTML document, and you should be good to go.</p>
       <p>If there's a conflict with another jQuery version, you can either remove one of them or separate one from the global namespace:</p>
       {% capture tmp %}
       <script src="scripts/jquery.uranium.js"></script>
@@ -87,18 +87,24 @@ documentation_selected: selected
       <h2>Additional Resources</h2>
       <h3>Tutorials</h3>
       <p>To familiarize yourself with how Uranium can be added to a page, we've written up some tutorials demonstrating how to work through a basic and an advanced Uranium use-case. As you'll see, even the advanced example follows the same basic philosophy, allowing you to integration useful JavaScript interactions just by adding a few declarative elements to your HTML.</p>
-      <ul>
-        <li><a href="{{site.baseurl}}documentation/getting_started.html">Basic Use</a> &mdash; Creating a simple toggler</li>
-        <li><a href="{{site.baseurl}}documentation/advanced.html">Advanced Use</a> &mdash; Building a custom carousel with optional features</li>
-      </ul>
+      <dl>
+        <dt><a href="{{site.baseurl}}documentation/getting_started.html">Basic Use</a></dt>
+        <dd>Creating a simple toggler</dd>
+        <dt><a href="{{site.baseurl}}documentation/advanced.html">Advanced Use</a></dt>
+        <dd>Building a custom carousel with optional features</dd>
+      </dl>
       <h3>Additional Documentation</h3>
       <p>We've written up some more detailed notes on some of the ways in which Uranium is unique. Uranium is not trying to be all things to all people, but for those who need something lightweight, unopinionated, and focused on injecting simple interactions in a declarative manner, Uranium just may be the answer.</p>
-      <ul>
-        <li><a href="{{site.baseurl}}documentation/philosophy.html">Philosophy</a> &mdash; The guiding philosophy behind Uranium and the interactions we support</li>
-        <li><a href="{{site.baseurl}}documentation/model.html">Model</a> &mdash; general information about the model on which all the interactions are based</li>
-        <li><a href="{{site.baseurl}}documentation/styling.html">Styling</a> &mdash; "lazy" and "explicit" styling of interactions</li>
-        <li><a href="{{site.baseurl}}documentation/grouping.html">Grouping</a> &mdash; when to use sets and when to use IDs</li>
-      </ul>
+      <dl>
+        <dt><a href="{{site.baseurl}}documentation/philosophy.html">Philosophy</a></dt>
+        <dd>The guiding philosophy behind Uranium and the interactions we support</dd>
+        <dt><a href="{{site.baseurl}}documentation/model.html">Model</a></dt>
+        <dd>general information about the model on which all the interactions are based</dd>
+        <dt><a href="{{site.baseurl}}documentation/styling.html">Styling</a></dt>
+        <dd>"lazy" and "explicit" styling of interactions</dd>
+        <dt><a href="{{site.baseurl}}documentation/grouping.html">Grouping</a></dt>
+        <dd>when to use sets and when to use IDs</dd>
+      </dl>
     </section>
 
     </div>
