--- a/documentation/grouping.html
+++ b/documentation/grouping.html
@@ -59,7 +59,7 @@ more_selected: selected
   </div>
 
   <h2>How Uranium Recognizes Ur-Sets and Ur-Ids</h2>
-  <p>When the page is first loaded, Uranium automatically creates a unique ur-id for every ur-set element it finds on a page. These are numerical values, starting with one, and incrementing by one for each ur-set encountered.</p>
+  <p>When the page is first loaded, Uranium automatically creates a unique ur-id for every ur-set element it finds on a page. These are numerical values with a "ur" prefix, starting with one, and incrementing by one for each ur-set encountered.</p>
   <p>(Note: For that reason, we recommend that if you are creating an ur-id of your own, you use letters rather than numbers, to avoid conflicts with the automatically generated ur-id values.)</p>
   <p>Uranium then searches through the HTML document for the special data attributes we use to add functionality to HTML elements. Once it sees an attribute that begins with <span class="inline_code">data-ur</span>, it looks for groups of components. The ur-set allows it to determine what interaction we're defining.</p>
   <p>Next, the JavaScript looks for ur-ids on a component. If it finds a ur-id, it uses this to determine which other compoments on the page it should treat as part of the same Uranium interaction.</p>
