--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@ title: Download
 name: download
 download_selected: selected
 ---
-{% assign version = "1.0.170" %}
+{% assign version = "1.0.171" %}
 <div id="page" class="copy">
   <h1>
     Download
@@ -13,6 +13,13 @@ download_selected: selected
   <p id="download_spiel">Here you can download Uranium for use in a project. We recommend the minified version unless you want to debug your JavaScript in the browser.</p>
   <p>Right-click on the appropriate file from the choices below, save it, then add it to your project.</p>
   <p>(Remember that you will also need to include <a href="//jquery.com/" target="_blank">jQuery</a> version 1.3 or greater in any page where you will be using Uranium interactions.)</p>
+  <div id="changelog">
+    <h4>Changelog</h4>
+    <dl>
+      <dt>1.0.171</dt>
+      <dd>Generated <code>data-ur-id</code>s follow "<code>ur{integer}</code>" format instead of "<code>{integer}</code>" as a workaround for iOS 8 JS bug.</dd>
+    </dl>
+  </div>
   <div id="links" class="row gutters">
     <div class="col-6">
       <a href="http://downloads.moovweb.com/uranium/{{version}}/uranium.js" target="_blank">
