--- a/download.html
+++ b/download.html
@@ -4,7 +4,7 @@ title: Download
 name: download
 download_selected: selected
 ---
-{% assign version = "1.0.175" %}
+{% assign version = "1.0.176" %}
 <div id="page" class="copy">
   <h1>
     Download
@@ -16,6 +16,9 @@ download_selected: selected
   <div id="changelog">
     <h4>Changelog</h4>
     <dl>
+      <dt>1.0.176</dt>
+      <dd>Add itemChanged event for firing events when objects such as carousels are touched by the user.</dd>
+      <dd>Improved calculating coordinates when zooming into elements for smoother interactions.</dd>
       <dt>1.0.171</dt>
       <dd>Generated <code>data-ur-id</code>s follow "<code>ur{integer}</code>" format instead of "<code>{integer}</code>" as a workaround for iOS 8 JS bug.</dd>
     </dl>
