added changedItem to docs

--- a/interactions/carousel.html
+++ b/interactions/carousel.html
@@ -81,6 +81,8 @@ js_tab:
     slideend:
       - event triggered on the <code>data-ur-set="carousel"</code> node when a transition from one thumbnail to the next ends
       - in some older versions of Uranium on jQuery, this event was named "slideend.ur.carousel"
+    itemChanged:
+      - event triggered on the <code>data-ur-set="carousel"</code>  node after the current displayed item has been changed.
 ---
 <h2 id="demonstration">Demonstration</h2>
 <div class="d-row d-gutters">
